# champi-imgui

./: .gitignore  .gitmessage  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  MIGRATION_PLAN.md  MIGRATION_SYSTEM_PROMPT.md  README.md  Validation_Test.ini  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml  rollback.yml
docs/: ARCHITECTURE.md  EXTENSIONS_GUIDE.md  IMGUI_CORE_REFERENCE.md  INDEX.md  MCP_SERVER_STRUCTURE.md  MCP_TOOLS_API.md  TEMPLATE_WORKFLOW.md  WIDGET_CATALOG.md
docs/diagnoses/: 181-drawing-widget-render.md  182-shm-macos-lifecycle.md
docs/phases/: milestones.json  phase-0-image-widget.md  phase-1-api-factory.md  phase-1-mcp-events.md  phase-1-merge-core-widget-system.md  phase-2-cli-rewrite.md  phase-2-complete-widget-system.md  phase-2-integration-polish.md  phase-3-advanced-features.md  phase-3-test-migration.md  phase-4-serialization-codegen.md  phase-4-standard-doc.md  phase-champi-ai-cli-foundation.md  phase-fastmcp-3-compat.md  phase-fix-drawing-shm-bugs.md  phase-ipc-prerequisite.md  phase-mcp-render-fix.md  phase-mcp-system-state.md  phase-spike-drawing-shm-bugs.md
docs/review/: senior-review.md
docs/specs/: backend.md  frontend.md
examples/: README.md  basic_demo.py  dashboard_demo.py  mcp_tools_demo.md  quick_demo.py  test_mcp_rendering.py
scripts/: debug_drawing_181.py  debug_shm_182.py  diagnose_mcp_render.py  validate_window.py
src/champi_imgui/: __init__.py  cli.py
src/champi_imgui/api/: __init__.py  server.py
src/champi_imgui/core/: __init__.py  binding.py  canvas.py  codegen.py  events.py  serialization.py  state.py  widget.py
src/champi_imgui/extensions/: __init__.py  animation.py  file_dialog.py  notification.py
src/champi_imgui/ipc/: __init__.py  command_types.py  shared_memory_manager.py  structs.py
src/champi_imgui/layout/: __init__.py  manager.py
src/champi_imgui/server/: __init__.py  main.py
src/champi_imgui/themes/: __init__.py  manager.py  presets.py
src/champi_imgui/utils/: __init__.py  ecosystem.py
src/champi_imgui/widgets/: __init__.py  basic.py  color.py  container.py  display.py  drawing.py  input.py  menu.py  plotting.py  progress.py  slider.py
tests/: __init__.py  test_animation.py  test_basic_widgets.py  test_basic_widgets_render.py  test_codegen.py  test_color_widgets.py  test_color_widgets_render.py  test_container_widgets.py  test_create_canvas_health_poll.py  test_data_binding.py  test_display_widgets.py  test_drawing_mcp_tools.py  test_drawing_shm_fixes.py  test_event_queue.py  test_file_dialog.py  test_get_canvas_info.py  test_image_widget.py  test_input_widgets.py  test_input_widgets_render.py  test_integration_canvas.py  test_ipc_structs.py  test_layout_manager.py  test_mcp_window_debug.py  test_measure_text.py  test_menu_widgets.py  test_notifications.py  test_plotting_widgets.py  test_progress_widgets.py  test_progress_widgets_render.py  test_screenshot.py  test_serialization.py  test_serialization_mcp_tools.py  test_server_tools.py  test_slider_widgets.py  test_system_state.py  test_theme_manager.py  test_update_annotation_shape.py  test_update_tools.py  test_version.py  test_widget_infrastructure.py
tests/ipc/: test_shared_memory_manager.py
tests/widgets/: test_drawing.py  test_drawing_widget.py
